# TFKosmos

./: .gitignore  .mcp.json  CLAUDE.md  Makefile  README.md  TODO.md  dev.sh  package.json
.claude/: format-hook.sh  settings.json
.claude/agents/: README.md  doc-generator.md  git-smart-commit.md  terraform-validator.md  test-runner.md
.claude/rules/: agent-management.md  architecture.md  build-and-lint.md  coding-standards.md  commit-strategy.md  task-management.md  (+1 more)
.github/: dependabot.yml  pull_request_template.md
.playwright-mcp/: test-1.1.5-mobile-layout.md
.serena/: project.yml
backend/: Cargo.toml  TODO.md
backend/src/: config.rs  main.rs
backend/src/api/: error.rs
backend/src/api/routes/: connection.rs  generate.rs  mod.rs  resources.rs  scan.rs  templates.rs
backend/src/domain/: iam_policy.rs  mod.rs
backend/src/infra/: mod.rs
backend/src/infra/aws/: client_factory.rs  iam_client_trait.rs  mod.rs  real_iam_client.rs  scanner.rs
backend/src/infra/azure/: client_factory.rs  mod.rs  scanner.rs
backend/src/infra/generators/: naming.rs  terraform.rs
backend/src/infra/query/: evaluator.rs  lexer.rs  mod.rs  parser.rs
backend/src/infra/templates/: manager.rs
backend/src/infra/terraform/: cli.rs  mod.rs
backend/src/models/: request.rs  response.rs
backend/src/services/: connection_service.rs  dependency_service.rs  generation_service.rs  mod.rs  resource_service.rs  scan_service.rs  template_service.rs  validation_service.rs
backend/templates_default/terraform/aws/: iam_group.tf.j2  iam_policy.tf.j2  iam_role.tf.j2  iam_user.tf.j2
deployment/: package-lock.json  package.json
deployment/src-tauri/: Cargo.toml  tauri.conf.json
deployment/src-tauri/icons/: icon.icns
deployment/src-tauri/src/: main.rs
docs/: 02-データモデル.md  03-API設計.md  04-UI設計.md  05-コンポーネント詳細仕様.md  06-ディレクトリ構造.md  07-実装詳細.md  08-エラーハンドリング.md  09-セキュリティ考慮事項.md  10-開発・デプロイ.md  11-テスト戦略.md  12-今後の拡張.md  14-環境設定.md  FAQ.md  README.md  用語集.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
scripts/: bump-agent-version.sh
(+109 files in other folders)
